--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JuniorWebDesign | Professional Website Design & Development Services</title>
-     <meta name="google-site-verification" content="googleef6df8b57cdcaf23.html"/>
+     <meta name="google-site-verification" content="EFkslJpo0i4F_grXywvO3djUHZb01HbSVBiCmJg8zbQ" />
 <meta name="description" content="We create modern, responsive, and high-performing websites tailored to your business needs. Get a professional online presence today!">
 <meta name="keywords" content="web design, web development, responsive websites, modern website design, custom websites, website services">
 <meta name="author" content="Juniordesign">
